Add DOM elements and refactor HTML selectors

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -13,24 +13,22 @@
                     <div>
                         <h1></h1>
                         <h2></h2>
+                        <h3></h3>
                     </div>                    
                     <div>
-                        <div></div>
-                        <p></p>
+                        <div id="temp"></div>
+                        <p class="hourParagraph"></p>
                     </div>
                 </section>
 
                 <section>
-                    <ul></ul>
+                    <ul class="nextHours"></ul>
                 </section>
 
                 <section>
-                    <h3></h3>
-                    <ul></ul>
+                    <h4>Próximos 3 días</h4>
+                    <ul class="nextDays"></ul>
                 </section>
-            </div>
-            <div id="own-cities">
-
             </div>
             <div id="more-info">
 
@@ -38,27 +36,9 @@
         </main>
 
         <footer>
-            <menu>
-                <nav>
-                    <ul>
-                        <li>
-                            <button>
-                                <img src="" alt="Home">
-                            </button>
-                        </li>
-                        <li>
-                            <button>
-                                <img src="" alt="More Info">
-                            </button>
-                        </li>
-                        <li>
-                            <button>
-                                <img src="" alt="Own Cities">
-                            </button>
-                        </li>
-                    </ul>
-                </nav>
-            </menu>
+            <button>
+                <img src="" alt="More Info">
+            </button>
         </footer>
 
         <script src="../JavaScript/app.js"></script>
