Add general styles on index page

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -9,13 +9,13 @@
     <body>
         <main>
             <div id="index">
-                <section>
-                    <div>
+                <section class="currentWeather">
+                    <div class="date">
                         <h1></h1>
                         <h2></h2>
                         <h3></h3>
                     </div>                    
-                    <div>
+                    <div class="description">
                         <div id="temp"></div>
                         <p class="hourParagraph"></p>
                     </div>
@@ -29,17 +29,12 @@
                     <h4>Próximos 3 días</h4>
                     <ul class="nextDays"></ul>
                 </section>
-            </div>
-            <div id="more-info">
 
+                <button>
+                    <img src="../assets/expand-more.svg" alt="More Info">
+                </button>
             </div>
         </main>
-
-        <footer>
-            <button>
-                <img src="" alt="More Info">
-            </button>
-        </footer>
 
         <script src="../JavaScript/app.js"></script>
     </body>
