--- a/HTML/index.html
+++ b/HTML/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="../CSS/style.css">
     </head>
     <body>
+        <div class="geolocation">
         <main>
             <div class="background"></div>
             <div id="index">
@@ -41,6 +42,7 @@
                 </div>
             </div>
         </main>
+        </div>  
 
         <script src="../JavaScript/app.js"></script>
     </body>
