Add function to change icon background according to weather region

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Weather App</title>
-        <link rel="stylesheet" href="../CSS/style.css">
+        <link rel="stylesheet" href="./CSS/style.css">
     </head>
     <body>
         <div class="geolocation">
@@ -36,7 +36,7 @@
                         <div class="hidden-button">
                             <div class="container-button">
                                 <button>
-                                    <img src="../assets/expand-more.svg" alt="More Info">
+                                    <img src="./assets/expand-more.svg" alt="More Info">
                                 </button>
                             </div>
                         </div>
@@ -44,7 +44,7 @@
 
                     <div class="moreInfo">
                         <article>
-                                <img src="../assets/temperature.svg" alt="Temp">
+                                <img src="./assets/temperature.svg" alt="Temp">
                                 <div class="dayTemperatures">
                                     <h2>Max</h2>
                                     <h2>Min</h2>
@@ -56,18 +56,18 @@
                         </article>
 
                         <article class="uv">
-                            <img src="../assets/uv.svg" alt="UV">
+                            <img src="./assets/uv.svg" alt="UV">
                             <p></p>
                             <h2>UV</h2>
                         </article>
 
                         <article class="humidity">
-                            <img src="../assets/humidity.svg" alt="Humidity Icon">
+                            <img src="./assets/humidity.svg" alt="Humidity Icon">
                             <h2>Humidity</h2>
                             <p></p>
                         </article>
                         <article class="wind">
-                            <img src="../assets/wind2.svg" alt="Wind Icon">
+                            <img src="./assets/wind2.svg" alt="Wind Icon">
                             <div>
                                 <h2>Wind</h2>
                                 <p></p>                                                       
@@ -79,12 +79,12 @@
                         <article class="sunset-sunrise">
                             <div>
                                 <h2>Amanecer</h2>
-                                <img src="../assets/sunrise.svg" alt="Sunrise">
+                                <img src="./assets/sunrise.svg" alt="Sunrise">
                                 <p></p>
                             </div>
                             <div>
                                 <h2>Anochecer</h2>
-                                <img src="../assets/sunset.svg" alt="Sunset">
+                                <img src="./assets/sunset.svg" alt="Sunset">
                                 <p></p>
                             </div>
                         </article>                        
@@ -92,6 +92,6 @@
             </main>
         </div>  
 
-        <script src="../JavaScript/app.js"></script>
+        <script src="./JavaScript/app.js"></script>
     </body>
 </html>
