Fixed moreInfo styles (not functional yet)

--- a/index.html
+++ b/index.html
@@ -42,40 +42,7 @@
                         </div>
                     </div>
 
-                    <div class="moreInfo">
-                        <article>
-                                <img src="./assets/temperature.svg" alt="Temp">
-                                <div class="dayTemperatures">
-                                    <h2>Max</h2>
-                                    <h2>Min</h2>
-                                </div>
-                            <div class="dayTemperatures">
-                                <p></p>
-                                <p></p>
-                            </div>
-                        </article>
-
-                        <article class="uv">
-                            <img src="./assets/uv.svg" alt="UV">
-                            <p></p>
-                            <h2>UV</h2>
-                        </article>
-
-                        <article class="humidity">
-                            <img src="./assets/humidity.svg" alt="Humidity Icon">
-                            <h2>Humidity</h2>
-                            <p></p>
-                        </article>
-                        <article class="wind">
-                            <img src="./assets/wind2.svg" alt="Wind Icon">
-                            <div>
-                                <h2>Wind</h2>
-                                <p></p>                                                       
-                                <h5>Dir.</h5>
-                                <p></p>
-                            </div>
-                        </article>
-
+                    <div class="moreInfo">                        
                         <article class="sunset-sunrise">
                             <div>
                                 <h2>Amanecer</h2>
@@ -87,7 +54,50 @@
                                 <img src="./assets/sunset.svg" alt="Sunset">
                                 <p></p>
                             </div>
-                        </article>                        
+                        </article>  
+                    
+                        <div class="container-tempAndUv">
+                        <article class="temperatures">
+                                <img src="./assets/temperature.svg" alt="Temp">
+                                <div class="dayTemperatures">
+                                    <h2>Max</h2>
+                                    <h2>Min</h2>
+                                </div>
+                            <div class="dayTemperatures">
+                                <p></p>
+                                <p></p>
+                            </div>
+                        </article>
+                        
+
+                        <article class="uv">
+                            <img src="./assets/uv.svg" alt="UV">
+                            <p></p>
+                            <h2>UV</h2>
+                        </article>
+                        </div>
+
+                        <div class="container-uvHum">
+                        <article class="humidity">
+                            <div>
+                            <img src="./assets/humidity.svg" alt="Humidity Icon">
+                            <h2>Humidity</h2>
+                            </div>
+                            <p></p>
+                        </article>
+
+                        <article class="wind">
+                            <div class="container-titleWind">
+                            <img src="./assets/wind2.svg" alt="Wind Icon">
+                                <h2>Wind</h2>
+                            </div>
+                            <p></p>                             
+                            <div class="container-windInfo">                          
+                                <h5>Dir.</h5>
+                                <p></p>
+                            </div>
+                        </article>
+                        </div>
                     </div>
             </main>
         </div>  
