Added button funcionalities to show and hidden more info

--- a/index.html
+++ b/index.html
@@ -11,23 +11,25 @@
             <main>
                 <div class="background"></div>
                     <div id="index">
-                        <section class="currentWeather">
-                            <div class="date">
-                                <h1></h1>
-                                <div class="date-container">
-                                    <h2></h2>
-                                    <h3></h3>
+                        <div class="container-currentInfo">
+                            <section class="currentWeather">
+                                <div class="date">
+                                    <h1></h1>
+                                    <div class="date-container">
+                                        <h2></h2>
+                                        <h3></h3>
+                                    </div>
+                                </div>                    
+                                <div class="description">
+                                    <div id="temp"></div>
+                                    <p class="hourParagraph"></p>
                                 </div>
-                            </div>                    
-                            <div class="description">
-                                <div id="temp"></div>
-                                <p class="hourParagraph"></p>
-                            </div>
-                        </section>
-
-                        <section>
-                            <ul class="nextHours"></ul>
-                        </section>
+                            </section>
+    
+                            <section>
+                                <ul class="nextHours"></ul>
+                            </section>
+                        </div>
 
                         <section class="last-section">
                             <h4>Próximos 3 días</h4>
@@ -36,7 +38,7 @@
                         <div class="hidden-button">
                             <div class="container-button">
                                 <button>
-                                    <img src="./assets/expand-more.svg" alt="More Info">
+                                    <img src="./assets/expand-more.svg" alt="More Info" class="button-img">
                                 </button>
                             </div>
                         </div>
