Added functionality to the buttons of the geolocation section

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <body>
         <div class="geolocation">
             <div>
-                <p>Weather App necesita conocer tu localizacion</p>
+                <p class="geolocationParagraph">Weather App necesita conocer tu localizacion</p>
                     <div class="geolocButtons">
                         <button class="geolocBut accept" >Aceptar</button>
                         <button class="geolocBut cancel">Cancelar</button>
+                        <button class="geolocBut back">Volver</button>
                     </div>
             </div>
         </div>
