Modify autoLocation for input location

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <body>
         <div class="geolocation">
             <div>
-                <p class="geolocationParagraph">Weather App necesita conocer tu localizacion</p>
+                <p class="geolocationParagraph">Introduce tu ubicación :</p>
+                <div class="input-container">
+                    <input type="text" id="location" name="location" class="inputLocation" placeholder="Madrid,ES">
+                </div>
                     <div class="geolocButtons">
                         <button class="geolocBut accept" >Aceptar</button>
                         <button class="geolocBut cancel">Cancelar</button>
